[package]

name = "proxy_server"
version = "0.1.0"
authors = ["nmbr7 <suhailr7@ymail.com>"]
edition = "2018"
[profile.release]
debug = true


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.10"
redis = "*"
log = "*"
tokio = { version = "0.2", features = ["full"] }
futures = "*"
env_logger = "*"
